--- a/app/contacts.html
+++ b/app/contacts.html
@@ -5,7 +5,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RS Conf 2019 | Contacts</title>
-
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
