--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RS Conf 2019</title>
-
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
@@ -90,8 +90,8 @@
           <h2><a href="venue.html">Venue</a></h2>
           <img src="images/venue-menu.jpg"
                alt="">
-          <h3>Moskva Cinema</h3>
-          <p>Praspiekt Pieramožcaŭ, 13, Minsk</p>
+          <h3>Palac kuĺtury prafsajuzaŭ</h3>
+          <p>praspiekt Niezaliežnasci 25, Minsk</p>
           <p><a href="venue.html">Learn more</a></p>
         </div>
 
@@ -142,8 +142,14 @@
       <!--<a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/">Buy Tickets</a>-->
       <!--<a class="btn" href="schedule.html">See Schedule</a>-->
       <!--</p>-->
+
+      <p><a class="btn" target="_blank"
+            href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
+        for Speakers</a> <a class="btn"
+                            href="mailto:rolling.scopes@gmail.com">Become
+        a Sponsor</a></p>
     </div>
-      <div class="content-lg">
+    <div class="content-lg">
       <h2 class="padding-top-lg">How it was in 2018</h2>
       <p>
         <a target="_blank" class="btn"
@@ -177,88 +183,88 @@
     </div>
   </section>
   <!--<section data-color="#FC94FC">-->
-    <!--<div class="content-lg">-->
+  <!--<div class="content-lg">-->
 
-      <!--<h2>Speakers</h2>-->
-      <!--<ul class="speaker-list">-->
-      <!--<li>-->
-      <!--<figure>-->
-      <!--<img src="images/speakers/martin_splitt.svg" alt="">-->
-      <!--<figcaption><h3><a href="speaker/martin-splitt.html">Martin Splitt</a></h3>-->
-      <!--<p>Zürich, Switzerland</p>-->
-      <!--</figcaption>-->
-      <!--</figure>-->
-      <!--</li>-->
-      <!--<li>-->
-      <!--<figure>-->
-      <!--<img src="images/speakers/asim_hussain.svg" alt="">-->
-      <!--<figcaption><h3><a href="speaker/asim-hussain.html">Asim Hussain</a></h3>-->
-      <!--<p>London, United Kingdom</p>-->
-      <!--</figcaption>-->
-      <!--</figure>-->
-      <!--</li>-->
-      <!--<li>-->
-      <!--<figure>-->
-      <!--<img src="images/speakers/anna_selezniova.svg" alt="Anna Selezniova">-->
-      <!--<figcaption><h3><a href="speaker/anna-selezniova.html">Anna Selezniova</a></h3>-->
-      <!--<p>Minsk, Belarus</p>-->
-      <!--</figcaption>-->
-      <!--</figure>-->
-      <!--</li>-->
-      <!--<li>-->
-      <!--<figure>-->
-      <!--<img src="images/speakers/ivan_jovanovic.svg" alt="">-->
-      <!--<figcaption><h3><a href="speaker/ivan-jovanovic.html">Ivan Jovanovic</a></h3>-->
-      <!--<p>Belgrade, Republic of Serbia</p>-->
-      <!--</figcaption>-->
-      <!--</figure>-->
-      <!--</li>-->
-      <!--<li>-->
-      <!--<figure>-->
-      <!--<img src="images/speakers/vsevolod_shmyrov.svg" alt="">-->
-      <!--<figcaption><h3><a href="speaker/vsevolod-shmyrov.html">Vsevolod Shmyrov</a></h3>-->
-      <!--<p>Moscow, Russia</p>-->
-      <!--</figcaption>-->
-      <!--</figure>-->
-      <!--</li>-->
-      <!--<li>-->
-      <!--<figure>-->
-      <!--<img src="images/speakers/konstantin_krivlenia.svg" alt="">-->
-      <!--<figcaption><h3><a href="speaker/konstantin-krivlenia.html">Konstantin Krivlenia</a></h3>-->
-      <!--<p>Minsk, Belarus</p>-->
-      <!--</figcaption>-->
-      <!--</figure>-->
-      <!--</li>-->
-      <!--<li>-->
-      <!--<figure>-->
-      <!--<img src="images/speakers/vasiliy_vanchuk.svg" alt="">-->
-      <!--<figcaption><h3><a href="speaker/vasiliy-vanchuk.html">Vasiliy Vanchuk</a></h3>-->
-      <!--<p>Minsk, Belarus</p>-->
-      <!--</figcaption>-->
-      <!--</figure>-->
-      <!--</li>-->
-      <!--<li>-->
-      <!--<figure>-->
-      <!--<img src="images/speakers/alexey_migutsky.svg" alt="Alexey Migutsky">-->
-      <!--<figcaption><h3><a href="speaker/alexey-migutsky.html">Alexey Migutsky</a></h3>-->
-      <!--<p>Berlin, Germany</p>-->
-      <!--</figcaption>-->
-      <!--</figure>-->
-      <!--</li>-->
-      <!--</ul>-->
+  <!--<h2>Speakers</h2>-->
+  <!--<ul class="speaker-list">-->
+  <!--<li>-->
+  <!--<figure>-->
+  <!--<img src="images/speakers/martin_splitt.svg" alt="">-->
+  <!--<figcaption><h3><a href="speaker/martin-splitt.html">Martin Splitt</a></h3>-->
+  <!--<p>Zürich, Switzerland</p>-->
+  <!--</figcaption>-->
+  <!--</figure>-->
+  <!--</li>-->
+  <!--<li>-->
+  <!--<figure>-->
+  <!--<img src="images/speakers/asim_hussain.svg" alt="">-->
+  <!--<figcaption><h3><a href="speaker/asim-hussain.html">Asim Hussain</a></h3>-->
+  <!--<p>London, United Kingdom</p>-->
+  <!--</figcaption>-->
+  <!--</figure>-->
+  <!--</li>-->
+  <!--<li>-->
+  <!--<figure>-->
+  <!--<img src="images/speakers/anna_selezniova.svg" alt="Anna Selezniova">-->
+  <!--<figcaption><h3><a href="speaker/anna-selezniova.html">Anna Selezniova</a></h3>-->
+  <!--<p>Minsk, Belarus</p>-->
+  <!--</figcaption>-->
+  <!--</figure>-->
+  <!--</li>-->
+  <!--<li>-->
+  <!--<figure>-->
+  <!--<img src="images/speakers/ivan_jovanovic.svg" alt="">-->
+  <!--<figcaption><h3><a href="speaker/ivan-jovanovic.html">Ivan Jovanovic</a></h3>-->
+  <!--<p>Belgrade, Republic of Serbia</p>-->
+  <!--</figcaption>-->
+  <!--</figure>-->
+  <!--</li>-->
+  <!--<li>-->
+  <!--<figure>-->
+  <!--<img src="images/speakers/vsevolod_shmyrov.svg" alt="">-->
+  <!--<figcaption><h3><a href="speaker/vsevolod-shmyrov.html">Vsevolod Shmyrov</a></h3>-->
+  <!--<p>Moscow, Russia</p>-->
+  <!--</figcaption>-->
+  <!--</figure>-->
+  <!--</li>-->
+  <!--<li>-->
+  <!--<figure>-->
+  <!--<img src="images/speakers/konstantin_krivlenia.svg" alt="">-->
+  <!--<figcaption><h3><a href="speaker/konstantin-krivlenia.html">Konstantin Krivlenia</a></h3>-->
+  <!--<p>Minsk, Belarus</p>-->
+  <!--</figcaption>-->
+  <!--</figure>-->
+  <!--</li>-->
+  <!--<li>-->
+  <!--<figure>-->
+  <!--<img src="images/speakers/vasiliy_vanchuk.svg" alt="">-->
+  <!--<figcaption><h3><a href="speaker/vasiliy-vanchuk.html">Vasiliy Vanchuk</a></h3>-->
+  <!--<p>Minsk, Belarus</p>-->
+  <!--</figcaption>-->
+  <!--</figure>-->
+  <!--</li>-->
+  <!--<li>-->
+  <!--<figure>-->
+  <!--<img src="images/speakers/alexey_migutsky.svg" alt="Alexey Migutsky">-->
+  <!--<figcaption><h3><a href="speaker/alexey-migutsky.html">Alexey Migutsky</a></h3>-->
+  <!--<p>Berlin, Germany</p>-->
+  <!--</figcaption>-->
+  <!--</figure>-->
+  <!--</li>-->
+  <!--</ul>-->
 
-      <!--<h3>-->
-      <!--<a href="speakers.html">See all speakers</a>-->
-      <!--</h3>-->
-    <!--</div>-->
+  <!--<h3>-->
+  <!--<a href="speakers.html">See all speakers</a>-->
+  <!--</h3>-->
+  <!--</div>-->
   <!--</section>-->
   <section data-color="#F8EF5A">
     <div class="content-md">
       <h2>Venue</h2>
-      <!--<p><img class="img-venue" src="images/venue.svg" alt="Photo Palac kuĺtury prafsajuzaŭ"></p>-->
-      <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/7Gswqurw2wA2">Moskva Cinema</a>
+      <p><img class="img-venue" src="images/venue.svg" alt="Photo Palac kuĺtury prafsajuzaŭ"></p>
+      <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/GbECQ5BqUUs">Palac kuĺtury prafsajuzaŭ</a>
       </p>
-      <p>Praspiekt Pieramožcaŭ, 13, Minsk</p>
+      <p>Praspiekt Niezaliežnasci 25, Minsk</p>
       <p class="text-lg padding-top-lg">Minsk is the capital and the largest city in Belarus with population over 2
         million. It is a
         progressive, modern
