--- a/app/venue.html
+++ b/app/venue.html
@@ -5,7 +5,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RS Conf 2019 | Venue</title>
-
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
@@ -134,14 +134,15 @@
   <section>
     <div class="content-md">
       <h2 class="text-lg">Venue</h2>
-      <!--<p><img class="img-venue" src="images/venue.svg" alt="Photo Palac kuĺtury prafsajuzaŭ"></p>-->
-      <p class="text-md bold">
-        <a target="_blank" href="https://goo.gl/maps/7Gswqurw2wA2">Moskva Cinema</a>
+      <p><img class="img-venue" src="images/venue.svg" alt="Photo Palac kuĺtury prafsajuzaŭ"></p>
+      <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/GbECQ5BqUUs">Palac kuĺtury prafsajuzaŭ</a>
       </p>
-      <p>Praspiekt Pieramožcaŭ, 13, Minsk</p>
+      <p>Praspiekt Niezaliežnasci 25, Minsk</p>
 
       <p class="text-lg padding-top-lg">The Rolling Scopes Conference takes place in Minsk annually. This year it
-        will be held in Moskva Cinema in the historical center of the city. The venue has a nice touch of soviet vibes. </p>
+        will be held in The
+        Palace of Trade
+        Unions in the historical center of the city. The venue has a nice touch of soviet vibes. </p>
     </div>
     <div class="content-sm">
 
@@ -150,7 +151,7 @@
         the
         city, food and attractions.</p>
 
-      <p class="margin-bottom-md">If you plan to stay in Minsk for more than 5 days, please, read here about <a
+      <p class="margin-bottom-md">If you plan to stay in Minsk for more than 30 days, please, read here about <a
         href="https://34travel.me/gotobelarus/en/rubric/info">the registration process</a>.</p>
     </div>
   </section>
