delete date because it is not defined

--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
         <div class="menu-item-tickets">
           <h2><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
-            March 16-17, 2019
+            <!--March 16-17, 2019-->
             <br><span class="city-address">Minsk, Belarus</span></p>
 
           <!--<p><a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/"> Buy a Ticket</a></p>-->
@@ -134,7 +134,7 @@
     <div class="content-md">
       <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">
       <h1>The Rolling Scopes <br> Conference</h1>
-      <p class="bold text-md">16–17 March 2019, Minsk</p>
+      <!--<p class="bold text-md">16–17 March 2019, Minsk</p>-->
       <p class="text-md">The lagest JavaScript/Front-end conference in Belarus. Two full days of delicious content for
         amazing
         people of the front-end scene.</p>
