--- a/app/about.html
+++ b/app/about.html
@@ -98,7 +98,7 @@
         <div class="menu-item-tickets">
           <h2><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
-            March 16-17, 2019
+            <!--March 16-17, 2019-->
             <br><span class="city-address">Minsk, Belarus</span></p>
 
           <!--<p><a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/"> Buy a Ticket</a></p>-->
@@ -142,7 +142,7 @@
   <section class="shorted">
     <div class="content-sm text-center">
       <p class="text-lg">The Rolling Scopes Conference</p>
-      <p class="text-md">March 16-17, 2019</p>
+      <!--<p class="text-md">March 16-17, 2019</p>-->
 
       <!--<p class="text-center"><a class="btn margin-bottom-md" href="https://imaguru.by/product-tag/rolling-scopes/">Buy a Ticket</a></p>-->
 
