--- a/app/speaker.html
+++ b/app/speaker.html
@@ -99,7 +99,7 @@
         <div class="menu-item-tickets">
           <h2><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
-            March 16-17, 2019
+            <!--March 16-17, 2019-->
             <br><span class="city-address">Minsk, Belarus</span></p>
 
           <!--<p><a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/"> Buy a Ticket</a></p>-->
