update venue & date of rsconf19

--- a/app/about.html
+++ b/app/about.html
@@ -88,17 +88,16 @@
 
         <div class="menu-item-venue">
           <h2><a href="venue.html">Venue</a></h2>
-          <img src="images/venue-menu.jpg"
-               alt="">
-          <h3>Moskva Cinema</h3>
-          <p>Praspiekt Pieramožcaŭ, 13, Minsk</p>
+          <img src="images/ok16-logo.png" alt="ok16 logo">
+          <h3>ОК16 CULTURAL HUB</h3>
+          <p>vulica Kastryčnickaja 16, Minsk</p>
           <p><a href="venue.html">Learn more</a></p>
         </div>
 
         <div class="menu-item-tickets">
           <h2><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
-            <!--March 16-17, 2019-->
+            August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
           <!--<p><a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/"> Buy a Ticket</a></p>-->
