--- a/app/index.html
+++ b/app/index.html
@@ -88,17 +88,16 @@
 
         <div class="menu-item-venue">
           <h2><a href="venue.html">Venue</a></h2>
-          <img src="images/venue-menu.jpg"
-               alt="">
-          <h3>Palac kuĺtury prafsajuzaŭ</h3>
-          <p>praspiekt Niezaliežnasci 25, Minsk</p>
+          <img src="images/ok16-logo.png" alt="ok16 logo">
+          <h3>ОК16 CULTURAL HUB</h3>
+          <p>vulica Kastryčnickaja 16, Minsk</p>
           <p><a href="venue.html">Learn more</a></p>
         </div>
 
         <div class="menu-item-tickets">
           <h2><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
-            <!--March 16-17, 2019-->
+            August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
           <!--<p><a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/"> Buy a Ticket</a></p>-->
@@ -134,7 +133,7 @@
     <div class="content-md">
       <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">
       <h1>The Rolling Scopes <br> Conference</h1>
-      <!--<p class="bold text-md">16–17 March 2019, Minsk</p>-->
+      <p class="bold text-md">Minsk, 9-11 August 2019</p>
       <p class="text-md">The lagest JavaScript/Front-end conference in Belarus. Two full days of delicious content for
         amazing
         people of the front-end scene.</p>
@@ -261,10 +260,10 @@
   <section data-color="#F8EF5A">
     <div class="content-md">
       <h2>Venue</h2>
-      <p><img class="img-venue" src="images/venue.svg" alt="Photo Palac kuĺtury prafsajuzaŭ"></p>
-      <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/GbECQ5BqUUs">Palac kuĺtury prafsajuzaŭ</a>
+      <p><img class="img-venue" src="images/ok16-logo.png" alt="ok16 logo"></p>
+      <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/dn6gJtGXtb52">ОК16 CULTURAL HUB</a>
       </p>
-      <p>Praspiekt Niezaliežnasci 25, Minsk</p>
+      <p>vulica Kastryčnickaja 16, Minsk</p>
       <p class="text-lg padding-top-lg">Minsk is the capital and the largest city in Belarus with population over 2
         million. It is a
         progressive, modern
