--- a/app/venue.html
+++ b/app/venue.html
@@ -88,17 +88,16 @@
 
         <div class="menu-item-venue">
           <h2><a href="venue.html">Venue</a></h2>
-          <img src="images/venue-menu.jpg"
-               alt="">
-          <h3>Moskva Cinema</h3>
-          <p>Praspiekt Pieramožcaŭ, 13, Minsk</p>
+          <img src="images/ok16-logo.png" alt="ok16 logo">
+          <h3>ОК16 CULTURAL HUB</h3>
+          <p>vulica Kastryčnickaja 16, Minsk</p>
           <p><a href="venue.html">Learn more</a></p>
         </div>
 
         <div class="menu-item-tickets">
           <h2><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
-            <!--March 16-17, 2019-->
+            August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
           <!--<p><a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/"> Buy a Ticket</a></p>-->
@@ -134,15 +133,15 @@
   <section>
     <div class="content-md">
       <h2 class="text-lg">Venue</h2>
-      <p><img class="img-venue" src="images/venue.svg" alt="Photo Palac kuĺtury prafsajuzaŭ"></p>
-      <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/GbECQ5BqUUs">Palac kuĺtury prafsajuzaŭ</a>
+      <p><img class="img-venue" src="images/ok16-logo.png" alt="ok16 logo"></p>
+      <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/dn6gJtGXtb52">ОК16 CULTURAL HUB</a>
       </p>
-      <p>Praspiekt Niezaliežnasci 25, Minsk</p>
+      <p>vulica Kastryčnickaja 16, Minsk</p>
 
-      <p class="text-lg padding-top-lg">The Rolling Scopes Conference takes place in Minsk annually. This year it
-        will be held in The
-        Palace of Trade
-        Unions in the historical center of the city. The venue has a nice touch of soviet vibes. </p>
+      <!--<p class="text-lg padding-top-lg">The Rolling Scopes Conference takes place in Minsk annually. This year it-->
+        <!--will be held in The-->
+        <!--Palace of Trade-->
+        <!--Unions in the historical center of the city. The venue has a nice touch of soviet vibes. </p>-->
     </div>
     <div class="content-sm">
 
