fix venue on the contacts page

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -141,11 +141,10 @@
   <section>
     <div class="content-md">
       <h2>Venue</h2>
-      <!--<p><img class="img-venue" src="images/venue.svg" alt="Photo Palac kuĺtury prafsajuzaŭ"></p>-->
-      <p class="text-md bold">
-        <a target="_blank" href="https://goo.gl/maps/7Gswqurw2wA2">Moskva Cinema</a>
+      <p><img class="img-venue" src="images/ok16-logo.png" alt="ok16 logo"></p>
+      <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/dn6gJtGXtb52">ОК16 CULTURAL HUB</a>
       </p>
-      <p>Praspiekt Pieramožcaŭ, 13, Minsk</p>
+      <p>vulica Kastryčnickaja 16, Minsk</p>
     </div>
 
   </section>
