add telegram to social links

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -123,6 +123,7 @@
             <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fa fa-twitter"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/explore/tags/rollingscopes/"><i
               class="fa fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://t.me/therollingscopes/"><i class="fab fa-telegram-plane"></i></a></li>
           </ul>
         </div>
       </div>
@@ -445,6 +446,7 @@
         <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fa fa-twitter"></i></a></li>
         <li><a target="_blank" href="https://www.instagram.com/explore/tags/rollingscopes/"><i
           class="fa fa-instagram"></i></a></li>
+        <li><a target="_blank" href="https://t.me/therollingscopes/"><i class="fab fa-telegram-plane"></i></a></li>
       </ul>
     </div>
   </section>
