--- a/app/partners.html
+++ b/app/partners.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
-  <link href="https://use.fontawesome.com/a431cf1d2d.css" media="all" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <!-- endbower -->
@@ -113,16 +113,16 @@
           <h2>Follow us</h2>
           <p>Follow us on social media, our hashtag #rollingscopes</p>
           <ul class="social-links">
-            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fa fa-slack"></i></a></li>
+            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
             <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
-              class="fa fa-facebook"></i></a></li>
-            <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fa fa-youtube-play"
-                                                                                           aria-hidden="true"></i></a>
+              class="fab fa-facebook-f"></i></a></li>
+            <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
+                                                                                            ></i></a>
             </li>
-            <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fa fa-vk"></i></a></li>
-            <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fa fa-twitter"></i></a></li>
+            <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
+            <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/explore/tags/rollingscopes/"><i
-              class="fa fa-instagram"></i></a></li>
+              class="fab fa-instagram"></i></a></li>
             <li><a target="_blank" href="https://t.me/therollingscopes/"><i class="fab fa-telegram-plane"></i></a></li>
           </ul>
         </div>
@@ -177,16 +177,16 @@
       </p>
 
       <ul class="social-links">
-        <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fa fa-slack"></i></a></li>
+        <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
         <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
-          class="fa fa-facebook"></i></a></li>
-        <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fa fa-youtube-play"
-                                                                                       aria-hidden="true"></i></a>
+          class="fab fa-facebook-f"></i></a></li>
+        <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
+                                                                                        ></i></a>
         </li>
-        <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fa fa-vk"></i></a></li>
-        <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fa fa-twitter"></i></a></li>
+        <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
+        <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
         <li><a target="_blank" href="https://www.instagram.com/explore/tags/rollingscopes/"><i
-          class="fa fa-instagram"></i></a></li>
+          class="fab fa-instagram"></i></a></li>
         <li><a target="_blank" href="https://t.me/therollingscopes/"><i class="fab fa-telegram-plane"></i></a></li>
       </ul>
     </div>
