--- a/app/schedule.html
+++ b/app/schedule.html
@@ -6,8 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RS Conf 2019 | Schedule</title>
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <!-- Place favicon.ico in the root directory -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#603cba">
+  <meta name="theme-color" content="#ffffff">  <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- build:css styles/vendor.css -->
@@ -51,7 +56,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="speakers.html">Speakers</a></li>
-            <!--<li><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></li>-->
+            <li><a target="_blank" href="https://imaguru.by/product/rsconf-2019/">Tickets</a></li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="contacts.html">Contacts</a></li>
@@ -100,9 +105,8 @@
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
-          <!--<p><a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/"> Buy a Ticket</a></p>-->
-          <p class="placeholder-btn"> Not on sale yet</p>
-
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/rsconf-2019/"> Buy a Ticket</a></p>
+          <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
           <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
             <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
@@ -454,22 +458,17 @@
   <section class="section-follow-us">
     <div class="content-md">
       <h2>Follow us</h2>
-      <p class="text-lg">Follow us on <a target="_blank"
-                                         href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
+      <p class="text-lg">Join our Telegram group <a target="_blank"
+                                                    href="https://t.me/joinchat/HqpGRxPNqkR9TbsVH20Jzg">RS Conf 2019</a>
+      </p>
+      <p class="text-lg padding-top-lg">Follow us on <a target="_blank"
+                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
         target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to be the first to learn the news</p>
 
-      <p class="content-sm">Our hashtag on social media is <a
+      <p class="content-xsm">Our hashtag on social media is <a
         href="https://twitter.com/hashtag/rollingscopes?vertical=default&src=hash">#rollingscopes</a>.
         Or contact us directly on our email <a href="mailto:rolling.scopes@gmail.com">rolling.scopes@gmail.com</a></p>
-
-      <p class="text-lg padding-top-lg">Join our Slack channel <a target="_blank"
-                                                                  href="https://frontendbelarus.slack.com/?redir=%2Fmessages%2FC0KGWSMGE">#rsconf</a>.
-      </p>
-      <p class="content-sm">If you don't have access to frontendbelarus.slack.com, please, register <a target="_blank"
-                                                                                                       href="http://frontendbelarus.herokuapp.com/">here</a>.
-      </p>
-
       <ul class="social-links">
         <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
         <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
