update links to tickets

--- a/app/venue.html
+++ b/app/venue.html
@@ -56,7 +56,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="speakers.html">Speakers</a></li>
-            <!--<li><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></li>-->
+            <li><a href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="contacts.html">Contacts</a></li>
@@ -100,12 +100,12 @@
         </div>
 
         <div class="menu-item-tickets">
-          <h2><a href="https://imaguru.by/product-tag/rolling-scopes/">Tickets</a></h2>
+          <h2><a href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
-          <p><a target="_blank" class="btn" href="https://imaguru.by/product/rsconf-2019/"> Buy a Ticket</a></p>
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a Ticket</a></p>
           <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
 
