add ticket button to landing page

--- a/app/index.html
+++ b/app/index.html
@@ -140,10 +140,10 @@
       <p class="text-md">The lagest JavaScript/Front-end conference in Belarus. Three full days of delicious content for
         amazing
         people of the front-end scene.</p>
-      <!--<p>-->
-      <!--<a class="btn" href="https://imaguru.by/product-tag/rolling-scopes/">Buy Tickets</a>-->
+      <p>
+      <a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy Tickets</a>
       <!--<a class="btn" href="schedule.html">See Schedule</a>-->
-      <!--</p>-->
+      </p>
 
       <p><a class="btn" target="_blank"
             href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
