add andre to conf speakers

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -143,7 +143,7 @@
       <ul class="speaker-list">
       <li>
       <figure>
-      <img src="images/speakers/andrei_lesnitsky.jpg" alt="Andrei Lesnitsky photo">
+      <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
       <figcaption>
       <h3><a href="speaker/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
       <p>Minsk, Belarus</p>
@@ -151,9 +151,19 @@
       </figure>
       </li>
 
+        <li>
+          <figure>
+            <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
+            <figcaption>
+              <h3><a href="speaker/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
+              <p>Los Angeles, California</p>
+            </figcaption>
+          </figure>
+        </li>
+
       <li>
       <figure>
-      <img src="images/speakers/alexander_gerasimov.jpg" alt="Alex Gerasimov photo">
+      <img src="images/speakers/alexander-gerasimov.jpg" alt="Alex Gerasimov photo">
       <figcaption>
       <h3><a href="speaker/alexander-gerasimov.html">Alex Gerasimov</a></h3>
       <p>Berlin, Germany</p>
